# chuk-mcp-pptx

./: .gitignore  COMPLETION_SUMMARY.txt  COMPONENT_ENHANCEMENT_PLAN.md  DEBUGGING_MCP_CLI.md  DESIGN_SYSTEM_AUDIT.md  FINAL_REFACTORING_STATUS.md  IMPROVEMENTS.md  MIGRATION_COMPLETE.md  Makefile  README.md  REFACTORING_100_PERCENT_COMPLETE.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  TESTING_AND_DOCS_SUMMARY.md  TEST_MIGRATION_STATUS.md  apply_refactoring.py  coverage.xml  finish_refactoring.py  fix_all_types.py  fix_registry_types.py  fix_shape_tools_remaining.sh  fix_slide_layout_tools.py  pyproject.toml  pytest.ini  refactor_script.py  test_advanced_charts.py  test_exact_slide4.py  test_problem_charts.py  test_single_chart.py  test_slide4_minimal.py  test_slides_1_to_8.py  test_slides_9_to_15.py
.github/workflows/: ci.yml  test.yml
diagnostics/: async_server.py  basic_pptx.py  chart_debug.py  chart_utils.py  compatibility.py  file_validity.py  minimal_issue.py  server_charts.py  xml_check.py
docs/: ENHANCED_COMPONENTS.md  layout-system.md
examples/: README.md  add_error_wrapper.py  basic_presentation.py  beautiful_chart_gallery.py  beautiful_themes_demo.py  chart_demo.py  chart_gallery.py  chat_conversation_showcase.py  check_all_slides.py  code_examples.py  complete_chart_showcase.py  component_showcase.py  comprehensive_chart_showcase.py  container_chat_showcase.py  core_components_showcase.py  debug_stdio.py  demo_all_themes.py  domain_focused_showcase.py  enhanced_components_demo.py  fixed_comprehensive_showcase.py  full_inspection.py  image_demo.py  layout_inspection_demo.py  layout_system_showcase.py  output_basic.pptx  output_mcp_test.pptx  placeholder_positioning_demo.py  platform_chat_showcase.py  shapes_gallery.py  simple_example.py  table_gallery.py  test_connectors.py  test_json_rpc.py  test_mcp_server.py  test_server_stderr.py  test_themed_shapes.py  theme_chart_galleries.py  theme_showcase_by_domain.py  themes_showcase.py  tokens_showcase.py  (+1 more)
examples/archive/: check_connectors.py  demo_single_theme.py  fix_chart_galleries.py  image_gallery.py  inspect_connectors.py  robust_showcase.py  (+5 more)
tests/: conftest.py  test_async_server.py  test_composition.py  test_inspection_tools.py  test_presentation_manager.py  test_table.py  test_text_utils.py  test_tools.py  test_variants.py
(+185 files in other folders)
