[project]
name = "chuk-mcp-pptx"
version = "0.1.0"
description = "MCP server for PowerPoint operations using python-pptx"
authors = [{ name = "Chris Hay" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.1",
    "python-pptx>=1.0.2",
    "chuk-mcp-server @ git+https://github.com/chrishayuk/chuk-mcp-server.git",
]

[project.scripts]
chuk-mcp-pptx = "chuk_mcp_pptx.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chuk_mcp_pptx"]

[tool.hatch.metadata]
allow-direct-references = true